added unziped data ontime data files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+Flight_data_files/Jan_2019_ontime.csv
+Flight_data_files/Jan_2020_ontime.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
