--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 Flight_data_files/Jan_2019_ontime.csv
 Flight_data_files/Jan_2020_ontime.csv
 
+config.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
