--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 Flight_data_files/Jan_2019_ontime.csv
 Flight_data_files/Jan_2020_ontime.csv
 Dashboard/FlightDelayPredictorConfig.py
+virt
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
