--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+Flight_data_files/Jan_2019_ontime.csv
+Flight_data_files/Jan_2020_ontime.csv
+Dashboard/FlightDelayPredictorConfig.py
+virt
+
 config.py
 
 # Byte-compiled / optimized / DLL files
